--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
 
                 .operator {
                         background-color: #d7db0d;
-                        color: white;
+                        color: black;
+                        font size: 25px;
                 }
         </style>
 </head>
