--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
         </style>
 </head>
 <body>
+        <h1>Atharv Keshari</h1>
+        
         <div class="calculator-body">
                 <input type="text" id="display" readonly>
                 <div class="btn">
